--- a/Biography.html
+++ b/Biography.html
@@ -201,7 +201,7 @@
   <div class="header">
     <div class="container">
       <div class="photo-frame">
-        <img src="C:\Users\shamm\Downloads\WhatsApp Image 2025-02-17 at 3.25.58 AM.jpeg" alt="Profile Photo" class="photo-img">
+        <img src="WhatsApp Image 2025-02-17 at 3.25.58 AM.jpeg" alt="Profile Photo" class="photo-img">
       </div>
       <div class="name">Sham Ming Him, Hugo</div>
       <div class="title">Data Science Student</div>
